--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.application.name=student-management
-spring.datasource.url=jdbc:mysql://localhost:3306/studentdb?createDatabaseIfNotExist=true
+
+# MySQL Docker connection
+spring.datasource.url=jdbc:mysql://localhost:3306/studentdb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
+
+# JPA / Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-# Server configuration :
+# Server configuration
 server.port=8089
 server.servlet.context-path=/student
