--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,20 +2,18 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: student-deployment
-  labels:
-    app: student-management
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: student-management
+      app: student
   template:
     metadata:
       labels:
-        app: student-management
+        app: student
     spec:
       containers:
         - name: student-app
-          image: taiebbelhadjali/pipeline:v1.0
+          image: student-app:latest
           ports:
-            - containerPort: 8080
+            - containerPort: 8089
