--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,7 @@
-spring.application.name=student-management
-
-# MySQL Docker connection
-spring.datasource.url=jdbc:mysql://mysql:3306/studentdb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://mysql:3306/studentdb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
-
-
-# JPA / Hibernate
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
-# Server configuration
+spring.jpa.show-sql=true
 server.port=8089
 server.servlet.context-path=/student
