--- a/k8s/mysql-service.yaml
+++ b/k8s/mysql-service.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: student-deployment
 spec:
-  ports:
-    - port: 3306
+  type: NodePort
   selector:
-    app: mysql
+    app: student
+  ports:
+    - port: 80          # external port
+      targetPort: 8089  # Spring Boot internal port
